Apache Tez Change Log
=====================

Release 0.9.0: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3551. FrameworkClient created twice causing minor delay.
  TEZ-3566. Avoid caching fs isntances in TokenCache after a point.
  TEZ-3568. Update SecurityUtils configuration to pick user provided configuration.
  TEZ-3561. Fix wrong tez tarball name in install.md.
  TEZ-3565. amConfig should check queuename isEmpty.
  TEZ-3559. TEZ_LIB_URIS doesn't work with schemes different than the defaultFS
  TEZ-3558. CartesianProduct is missing from the ExampleDriver class
  TEZ-3549. TaskAttemptImpl does not initialize TEZ_TASK_PROGRESS_STUCK_INTERVAL_MS correctly
  TEZ-3552. Shuffle split array when size-based sorting is turned off.
  TEZ-3537. ArrayIndexOutOfBoundsException with empty environment variables/Port YARN-3768 to Tez
  TEZ-3271. Provide mapreduce failures.maxpercent equivalent.
  TEZ-3222. Reduce messaging overhead for auto-reduce parallelism case.
  TEZ-3547. Add TaskAssignment Analyzer.
  TEZ-3508. TestTaskScheduler cleanup.
  TEZ-3536. NPE in WebUIService start when host resolution fails.
  TEZ-3269. Provide basic fair routing and scheduling functionality via custom VertexManager and EdgeManager.
  TEZ-3534. Differentiate thread names on Fetchers, minor changes to shuffle shutdown code.
  TEZ-3491. Tez job can hang due to container priority inversion.
  TEZ-3533. ShuffleScheduler should shutdown threadpool on exit.
  TEZ-3477. MRInputHelpers generateInputSplitsToMem public API modified
  TEZ-3465. Support broadcast edge into cartesian product vertex and forbid other edges.
  TEZ-3493. DAG submit timeout cannot be set to a month
  TEZ-3505. Move license to the file header for TezBytesWritableSerialization
  TEZ-3486. COMBINE_OUTPUT_RECORDS/COMBINE_INPUT_RECORDS are not correct
  TEZ-3247. Add more unit test coverage for container reuse.
  TEZ-3215. Support for MultipleOutputs.